objects/DeliveryFiscalYear__c.object
<CustomObject>
    <fields>
        <fullName>DeliveryFiscalYearEID__c</fullName>
        <description>The Enterprise ID for this Delivery Fiscal Year record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Delivery Fiscal Year record.</inlineHelpText>
        <label>Delivery Fiscal Year EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <description>The delivery unit that this fiscal year applies to.</description>
        <inlineHelpText>The delivery unit that this fiscal year applies to.</inlineHelpText>
        <label>Delivery</label>
        <referenceTo>Delivery__c</referenceTo>
        <relationshipLabel>Delivery Fiscal Years</relationshipLabel>
        <relationshipName>DeliveryFiscalYears</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EntityFiscalYear__c</fullName>
        <label>Entity Fiscal Year</label>
        <referenceTo>EntityFiscalyear__c</referenceTo>
        <relationshipLabel>Delivery Fiscal Years</relationshipLabel>
        <relationshipName>DeliveryFiscalYears</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Delivery Fiscal Year</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Delivery Fiscal Year Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Fiscal Years</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>